# ASVpoof2019_LA_WAV2VEC2

./: drsas-net.ipynb
wav2vec2_xlsr_pkg/wav2vec2_xlsr_pkg/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
wav2vec2_xlsr_pkg/wav2vec2_xlsr_pkg/configs/: defaults.yaml
wav2vec2_xlsr_pkg/wav2vec2_xlsr_pkg/scripts/: eval.py  train.py
wav2vec2_xlsr_pkg/wav2vec2_xlsr_pkg/tests/: test_smoke.py
wav2vec2_xlsr_pkg/wav2vec2_xlsr_pkg/wav2vec2_xlsr/: config.py
wav2vec2_xlsr_pkg/wav2vec2_xlsr_pkg/wav2vec2_xlsr/engine/: evaluator.py  trainer.py
wav2vec2_xlsr_pkg/wav2vec2_xlsr_pkg/wav2vec2_xlsr/models/: asr.py
wav2vec2_xlsr_pkg/wav2vec2_xlsr_pkg/wav2vec2_xlsr/utils/: logger.py  metrics.py  seed.py
